--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,11 @@ dependencies:
   cloud_firestore:
   firebase_core:
   firebase_auth:
+  auto_route: ^7.7.0
   equatable: ^2.0.5
+  flash: ^3.0.5+1
+  flutter_local_notifications:
+
   uuid:
   intl:
 
@@ -40,6 +44,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  auto_route_generator: ^7.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
